# serializer version: 1
# name: test_cli_structure
  dict({
    'firmware': list([
      'host',
      'output_json',
      'port',
    ]),
    'identify': list([
      'host',
      'port',
    ]),
    'info': list([
      'host',
      'output_json',
      'port',
    ]),
    'off': list([
      'host',
      'port',
    ]),
    'on': list([
      'brightness',
      'host',
      'port',
      'temperature',
    ]),
    'restart': list([
      'host',
      'port',
    ]),
    'scan': list([
      'quiet',
    ]),
    'state': list([
      'host',
      'output_json',
      'port',
    ]),
    'update': list([
      'assume_yes',
      'force',
      'host',
      'port',
    ]),
  })
# ---
# name: test_connection_error_handler
  '''
  ╭───────────────────────── Connection error ─────────────────────────╮
  │                                                                    │
  │     Could not connect to the Elgato Light device. Please check the │
  │     hostname/IP address and ensure the device is powered on and    │
  │     reachable on the network.                                      │
  │                                                                    │
  ╰────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_elgato_error_handler
  '''
  ╭──── Elgato error ────╮
  │ something went wrong │
  ╰──────────────────────╯
  
  '''
# ---
# name: test_firmware
  '''
            Firmware — Frenck          
  ┏━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃ Property  ┃ Value                 ┃
  ┡━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━┩
  │ Product   │ Elgato Key Light      │
  │ Board     │ Elgato Key Light (53) │
  │ Installed │ 1.0.3 (218)           │
  │ Available │ 1.0.3 (222)           │
  │ Status    │ update available      │
  └───────────┴───────────────────────┘
  
  '''
# ---
# name: test_firmware_json
  '''
  {
    "product_name": "Elgato Key Light",
    "hardware_board_type": 53,
    "installed_version": "1.0.3 (218)",
    "available_version": "1.0.3 (222)",
    "update_available": true
  }
  
  '''
# ---
# name: test_firmware_up_to_date
  '''
            Firmware — Frenck          
  ┏━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃ Property  ┃ Value                 ┃
  ┡━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━┩
  │ Product   │ Elgato Key Light      │
  │ Board     │ Elgato Key Light (53) │
  │ Installed │ 1.0.3 (218)           │
  │ Available │ 1.0.3 (218)           │
  │ Status    │ up to date            │
  └───────────┴───────────────────────┘
  
  '''
# ---
# name: test_info
  '''
           Elgato Light — Frenck         
  ┏━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┓
  ┃ Property        ┃ Value             ┃
  ┡━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━┩
  │ Product         │ Elgato Key Light  │
  │ Serial number   │ CN11A1A00001      │
  │ Display name    │ Frenck            │
  │ Firmware        │ 1.0.3 (build 218) │
  │ Hardware board  │ 53                │
  │ MAC address     │ AA:BB:CC:DD:EE:FF │
  │ Wi-Fi SSID      │ Frenck-IoT        │
  │ Wi-Fi signal    │ -48 dBm (100%)    │
  │ Wi-Fi frequency │ 2400 MHz          │
  └─────────────────┴───────────────────┘
  
  '''
# ---
# name: test_info_json
  '''
  {
    "product_name": "Elgato Key Light",
    "serial_number": "CN11A1A00001",
    "display_name": "Frenck",
    "firmware_version": "1.0.3",
    "firmware_build_number": 218,
    "hardware_board_type": 53,
    "mac_address": "AA:BB:CC:DD:EE:FF",
    "features": [
      "lights"
    ]
  }
  
  '''
# ---
# name: test_state_json
  '''
  {
    "on": true,
    "brightness": 80,
    "temperature": 230
  }
  
  '''
# ---
# name: test_state_off
  '''
          Light State        
  ┏━━━━━━━━━━━━━┳━━━━━━━━━━━┓
  ┃ Property    ┃ Value     ┃
  ┡━━━━━━━━━━━━━╇━━━━━━━━━━━┩
  │ Power       │ off       │
  │ Brightness  │ 0%        │
  │ Temperature │ 200 mired │
  └─────────────┴───────────┘
  
  '''
# ---
# name: test_state_on
  '''
          Light State        
  ┏━━━━━━━━━━━━━┳━━━━━━━━━━━┓
  ┃ Property    ┃ Value     ┃
  ┡━━━━━━━━━━━━━╇━━━━━━━━━━━┩
  │ Power       │ on        │
  │ Brightness  │ 80%       │
  │ Temperature │ 230 mired │
  └─────────────┴───────────┘
  
  '''
# ---
